--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@ under the License.
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-connector-cassandra_2.11</artifactId>
+			<version>1.14.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-walkthrough-common_${scala.binary.version}</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
