--- a/pom.xml
+++ b/pom.xml
@@ -53,15 +53,30 @@ under the License.
 	</repositories>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.apache.bahir/flink-connector-activemq -->
 		<dependency>
 			<groupId>org.apache.bahir</groupId>
 			<artifactId>flink-connector-activemq_2.11</artifactId>
 			<version>1.1-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-scala_2.11</artifactId>
-			<version>1.4.2</version>
+			<!-- <version>1.4.2</version> -->
+			<version>1.14.2</version>
+		</dependency>
+		<!--<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-runtime_2.12</artifactId>
+			<version>1.13.5</version>
+		</dependency> -->
+		<!-- Thanks for using https://jar-download.com -->
+
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>5.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
